Stonebreak: Early save system f7 implementation ( save broke)